[gd_scene load_steps=89 format=3 uid="uid://b21nu2xrrswbn"]

[ext_resource type="Script" path="res://scripts/bald_pirate.gd" id="1_lgqhx"]
[ext_resource type="Texture2D" uid="uid://gl0vpxuej2m0" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/1.png" id="1_ybo1t"]
[ext_resource type="Texture2D" uid="uid://cnm14gynesfht" path="res://sprites/2-Enemy-Bald Pirate/5-Fall/1.png" id="2_hl63v"]
[ext_resource type="Texture2D" uid="uid://daqqhpylti7er" path="res://sprites/2-Enemy-Bald Pirate/10-Dead Ground/1.png" id="2_o4rgu"]
[ext_resource type="Texture2D" uid="uid://brc0xcs0m6uci" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/2.png" id="2_p8y2w"]
[ext_resource type="Texture2D" uid="uid://dafxuevic4kp3" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/3.png" id="3_360ic"]
[ext_resource type="Texture2D" uid="uid://dt076cleo7ddl" path="res://sprites/2-Enemy-Bald Pirate/10-Dead Ground/2.png" id="3_ar5sa"]
[ext_resource type="Texture2D" uid="uid://ddfgs4ei8t4hb" path="res://sprites/2-Enemy-Bald Pirate/5-Fall/2.png" id="3_m7rby"]
[ext_resource type="Texture2D" uid="uid://ilmiftm0ffmp" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/4.png" id="4_1vjyj"]
[ext_resource type="Texture2D" uid="uid://dqi0nuawi71si" path="res://sprites/2-Enemy-Bald Pirate/10-Dead Ground/3.png" id="4_kpqtm"]
[ext_resource type="Texture2D" uid="uid://dqaqevdjeubdw" path="res://sprites/2-Enemy-Bald Pirate/10-Dead Ground/4.png" id="5_1odpe"]
[ext_resource type="Texture2D" uid="uid://caqdog3jwbprt" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/5.png" id="5_wrkia"]
[ext_resource type="Texture2D" uid="uid://bvdjekj137pri" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/6.png" id="6_dce7y"]
[ext_resource type="Texture2D" uid="uid://b108xto67g1m7" path="res://sprites/2-Enemy-Bald Pirate/9-Dead Hit/1.png" id="6_puj0h"]
[ext_resource type="Texture2D" uid="uid://30cogob0du8p" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/7.png" id="7_cb18h"]
[ext_resource type="Texture2D" uid="uid://b5acc20bpskn7" path="res://sprites/2-Enemy-Bald Pirate/9-Dead Hit/2.png" id="7_r8mby"]
[ext_resource type="Texture2D" uid="uid://nvsedolf41ku" path="res://sprites/2-Enemy-Bald Pirate/9-Dead Hit/3.png" id="8_eba4i"]
[ext_resource type="Texture2D" uid="uid://27uai2630d82" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/8.png" id="8_n1hw5"]
[ext_resource type="Texture2D" uid="uid://bgtm3eee7f1pc" path="res://sprites/2-Enemy-Bald Pirate/9-Dead Hit/4.png" id="9_ro8so"]
[ext_resource type="Texture2D" uid="uid://d18qf0xy1gahb" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/9.png" id="9_vefm8"]
[ext_resource type="Texture2D" uid="uid://4cb0kyrxwvf7" path="res://sprites/2-Enemy-Bald Pirate/9-Dead Hit/5.png" id="10_ihmiu"]
[ext_resource type="Texture2D" uid="uid://ck6fcp1xau8ap" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/10.png" id="10_wcq1u"]
[ext_resource type="Texture2D" uid="uid://7ohiyb1kakp3" path="res://sprites/2-Enemy-Bald Pirate/9-Dead Hit/6.png" id="11_3xl75"]
[ext_resource type="Texture2D" uid="uid://bgb0rio7cksuk" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/11.png" id="11_42m1u"]
[ext_resource type="Texture2D" uid="uid://ehhq5qfsmsaj" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/12.png" id="12_oytqe"]
[ext_resource type="Texture2D" uid="uid://by3marqlbwl16" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/13.png" id="13_t2lll"]
[ext_resource type="Texture2D" uid="uid://d14u5iejwn6d6" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/14.png" id="14_2k66o"]
[ext_resource type="Texture2D" uid="uid://bqfb73mpupuyk" path="res://sprites/2-Enemy-Bald Pirate/8-Hit/1.png" id="14_c8tc3"]
[ext_resource type="Texture2D" uid="uid://b38mjkm7vwt3w" path="res://sprites/2-Enemy-Bald Pirate/8-Hit/2.png" id="15_cln0w"]
[ext_resource type="Texture2D" uid="uid://ynsyeoox8t2p" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/15.png" id="15_vywlw"]
[ext_resource type="Texture2D" uid="uid://b0iigmwq53ses" path="res://sprites/2-Enemy-Bald Pirate/8-Hit/3.png" id="16_55otc"]
[ext_resource type="Texture2D" uid="uid://dt1fo6uwnw3yt" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/16.png" id="16_dtr42"]
[ext_resource type="Texture2D" uid="uid://7f1wfyvx8qlu" path="res://sprites/2-Enemy-Bald Pirate/8-Hit/4.png" id="17_xrkn5"]
[ext_resource type="Texture2D" uid="uid://bqr75sro4sdca" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/17.png" id="17_yb6mr"]
[ext_resource type="Texture2D" uid="uid://bf58ccxeh8ei0" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/18.png" id="18_gcsqh"]
[ext_resource type="Texture2D" uid="uid://disktp1ihud67" path="res://sprites/2-Enemy-Bald Pirate/8-Hit/5.png" id="18_u26qn"]
[ext_resource type="Texture2D" uid="uid://5vmkwtod800a" path="res://sprites/2-Enemy-Bald Pirate/8-Hit/6.png" id="19_4r0vl"]
[ext_resource type="Texture2D" uid="uid://ewsq3dm8uit8" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/19.png" id="19_b4ym3"]
[ext_resource type="Texture2D" uid="uid://0b56asvg5skv" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/20.png" id="20_14ehq"]
[ext_resource type="Texture2D" uid="uid://drcha5gqblw67" path="res://sprites/2-Enemy-Bald Pirate/8-Hit/7.png" id="20_033ik"]
[ext_resource type="Texture2D" uid="uid://cdcesq6kktc65" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/21.png" id="21_1s5kn"]
[ext_resource type="Texture2D" uid="uid://bx5i7h2msgsdp" path="res://sprites/2-Enemy-Bald Pirate/8-Hit/8.png" id="21_66ws1"]
[ext_resource type="Texture2D" uid="uid://burwy1aw3vhhl" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/22.png" id="22_p6xu6"]
[ext_resource type="Texture2D" uid="uid://cjqml74t3sfrc" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/23.png" id="23_tpjs4"]
[ext_resource type="Texture2D" uid="uid://bgqcp0705haux" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/24.png" id="24_6kyit"]
[ext_resource type="Texture2D" uid="uid://dk85cqgl1bwy0" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/25.png" id="25_ry6i5"]
[ext_resource type="Texture2D" uid="uid://khcpjdh8xdyy" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/26.png" id="26_2l8ef"]
[ext_resource type="Texture2D" uid="uid://dswkkn1q4ouqh" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/27.png" id="27_4v4ef"]
[ext_resource type="Texture2D" uid="uid://bqai7d0tye0h8" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/28.png" id="28_m7qmh"]
[ext_resource type="Texture2D" uid="uid://dlbnn87i4dwoa" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/29.png" id="29_ujj8j"]
[ext_resource type="Texture2D" uid="uid://baf7md3fntd6x" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/30.png" id="30_da12h"]
[ext_resource type="Texture2D" uid="uid://c2sqv7iolnb8m" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/31.png" id="31_ncgxk"]
[ext_resource type="Texture2D" uid="uid://c72kopgetp8xu" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/32.png" id="32_1eepx"]
[ext_resource type="Texture2D" uid="uid://xyg4q505cppe" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/33.png" id="33_8b2tj"]
[ext_resource type="Texture2D" uid="uid://x0usjfgu1mgl" path="res://sprites/2-Enemy-Bald Pirate/1-Idle/34.png" id="34_kwwpy"]
[ext_resource type="Texture2D" uid="uid://dpgmcyjgj23qv" path="res://sprites/2-Enemy-Bald Pirate/4-Jump/1.png" id="38_88h7c"]
[ext_resource type="Texture2D" uid="uid://dt1c3xsna858o" path="res://sprites/2-Enemy-Bald Pirate/4-Jump/2.png" id="39_spwa8"]
[ext_resource type="Texture2D" uid="uid://h1y1o1qc458d" path="res://sprites/2-Enemy-Bald Pirate/4-Jump/3.png" id="40_6tita"]
[ext_resource type="Texture2D" uid="uid://bfi67nfdra67n" path="res://sprites/2-Enemy-Bald Pirate/4-Jump/4.png" id="41_apbpj"]
[ext_resource type="Texture2D" uid="uid://cla4irl6iqxus" path="res://sprites/2-Enemy-Bald Pirate/2-Run/1.png" id="42_aj6jx"]
[ext_resource type="Texture2D" uid="uid://ctrjjg8g01clp" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/1.png" id="42_hedri"]
[ext_resource type="Texture2D" uid="uid://doqwjc1l63qc6" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/2.png" id="43_mwsac"]
[ext_resource type="Texture2D" uid="uid://e72pfg7ifxaq" path="res://sprites/2-Enemy-Bald Pirate/2-Run/2.png" id="43_xgjmy"]
[ext_resource type="Texture2D" uid="uid://tyg25tf35qlx" path="res://sprites/2-Enemy-Bald Pirate/2-Run/3.png" id="44_10a1v"]
[ext_resource type="Texture2D" uid="uid://beac3qwpr7vkb" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/3.png" id="44_aigve"]
[ext_resource type="Texture2D" uid="uid://rj5f2e2wheor" path="res://sprites/2-Enemy-Bald Pirate/2-Run/4.png" id="45_2vpg5"]
[ext_resource type="Texture2D" uid="uid://llya2ry8004f" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/4.png" id="45_3h83a"]
[ext_resource type="Texture2D" uid="uid://woa7xkde6in" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/5.png" id="46_5x8y8"]
[ext_resource type="Texture2D" uid="uid://6i2cy8bwr7ek" path="res://sprites/2-Enemy-Bald Pirate/2-Run/5.png" id="46_c0vu5"]
[ext_resource type="Texture2D" uid="uid://dtb44eft4qv6t" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/6.png" id="47_25bvt"]
[ext_resource type="Texture2D" uid="uid://d4asepenmc4fo" path="res://sprites/2-Enemy-Bald Pirate/2-Run/6.png" id="47_ssd2d"]
[ext_resource type="Texture2D" uid="uid://gu7o831c4rah" path="res://sprites/2-Enemy-Bald Pirate/2-Run/7.png" id="48_1rdud"]
[ext_resource type="Texture2D" uid="uid://cenxwjj6g6301" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/7.png" id="48_16tv2"]
[ext_resource type="Texture2D" uid="uid://dk1ojxh3s50yl" path="res://sprites/2-Enemy-Bald Pirate/2-Run/8.png" id="49_3fn1l"]
[ext_resource type="Texture2D" uid="uid://bi4btojy1k78h" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/8.png" id="49_ityy1"]
[ext_resource type="Texture2D" uid="uid://ctf8n3p74ey7y" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/9.png" id="50_l84km"]
[ext_resource type="Texture2D" uid="uid://cx502d80qng8x" path="res://sprites/2-Enemy-Bald Pirate/2-Run/9.png" id="50_rowjk"]
[ext_resource type="Texture2D" uid="uid://dopdi7un03tmk" path="res://sprites/2-Enemy-Bald Pirate/2-Run/10.png" id="51_oxd6n"]
[ext_resource type="Texture2D" uid="uid://dlswcv73bm8s4" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/10.png" id="51_tgtwv"]
[ext_resource type="Texture2D" uid="uid://dy7nbnxvb0thw" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/11.png" id="52_1k0ut"]
[ext_resource type="Texture2D" uid="uid://dkyccyikj11nj" path="res://sprites/2-Enemy-Bald Pirate/2-Run/11.png" id="52_et35l"]
[ext_resource type="Texture2D" uid="uid://bwj6dljvowjcd" path="res://sprites/2-Enemy-Bald Pirate/2-Run/12.png" id="53_cvm5a"]
[ext_resource type="Texture2D" uid="uid://da7trqoyq015" path="res://sprites/2-Enemy-Bald Pirate/7-Attack/12.png" id="53_npuhe"]
[ext_resource type="Texture2D" uid="uid://bqx54py5kg8u" path="res://sprites/2-Enemy-Bald Pirate/2-Run/13.png" id="54_j3lho"]
[ext_resource type="Texture2D" uid="uid://b7fjx3gucpafm" path="res://sprites/2-Enemy-Bald Pirate/2-Run/14.png" id="55_mltuw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5f4br"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o4rgu")
}, {
"duration": 1.0,
"texture": ExtResource("3_ar5sa")
}, {
"duration": 1.0,
"texture": ExtResource("4_kpqtm")
}, {
"duration": 1.0,
"texture": ExtResource("5_1odpe")
}],
"loop": false,
"name": &"dead",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_puj0h")
}, {
"duration": 1.0,
"texture": ExtResource("7_r8mby")
}, {
"duration": 1.0,
"texture": ExtResource("8_eba4i")
}, {
"duration": 1.0,
"texture": ExtResource("9_ro8so")
}, {
"duration": 1.0,
"texture": ExtResource("10_ihmiu")
}, {
"duration": 1.0,
"texture": ExtResource("11_3xl75")
}],
"loop": false,
"name": &"dead hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hl63v")
}, {
"duration": 1.0,
"texture": ExtResource("3_m7rby")
}],
"loop": false,
"name": &"fall",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_c8tc3")
}, {
"duration": 1.0,
"texture": ExtResource("15_cln0w")
}, {
"duration": 1.0,
"texture": ExtResource("16_55otc")
}, {
"duration": 1.0,
"texture": ExtResource("17_xrkn5")
}, {
"duration": 1.0,
"texture": ExtResource("18_u26qn")
}, {
"duration": 1.0,
"texture": ExtResource("19_4r0vl")
}, {
"duration": 1.0,
"texture": ExtResource("20_033ik")
}, {
"duration": 1.0,
"texture": ExtResource("21_66ws1")
}],
"loop": false,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ybo1t")
}, {
"duration": 1.0,
"texture": ExtResource("2_p8y2w")
}, {
"duration": 1.0,
"texture": ExtResource("3_360ic")
}, {
"duration": 1.0,
"texture": ExtResource("4_1vjyj")
}, {
"duration": 1.0,
"texture": ExtResource("5_wrkia")
}, {
"duration": 1.0,
"texture": ExtResource("6_dce7y")
}, {
"duration": 1.0,
"texture": ExtResource("7_cb18h")
}, {
"duration": 1.0,
"texture": ExtResource("8_n1hw5")
}, {
"duration": 1.0,
"texture": ExtResource("9_vefm8")
}, {
"duration": 1.0,
"texture": ExtResource("10_wcq1u")
}, {
"duration": 1.0,
"texture": ExtResource("11_42m1u")
}, {
"duration": 1.0,
"texture": ExtResource("12_oytqe")
}, {
"duration": 1.0,
"texture": ExtResource("13_t2lll")
}, {
"duration": 1.0,
"texture": ExtResource("14_2k66o")
}, {
"duration": 1.0,
"texture": ExtResource("15_vywlw")
}, {
"duration": 1.0,
"texture": ExtResource("16_dtr42")
}, {
"duration": 1.0,
"texture": ExtResource("17_yb6mr")
}, {
"duration": 1.0,
"texture": ExtResource("18_gcsqh")
}, {
"duration": 1.0,
"texture": ExtResource("19_b4ym3")
}, {
"duration": 1.0,
"texture": ExtResource("20_14ehq")
}, {
"duration": 1.0,
"texture": ExtResource("21_1s5kn")
}, {
"duration": 1.0,
"texture": ExtResource("22_p6xu6")
}, {
"duration": 1.0,
"texture": ExtResource("23_tpjs4")
}, {
"duration": 1.0,
"texture": ExtResource("24_6kyit")
}, {
"duration": 1.0,
"texture": ExtResource("25_ry6i5")
}, {
"duration": 1.0,
"texture": ExtResource("26_2l8ef")
}, {
"duration": 1.0,
"texture": ExtResource("27_4v4ef")
}, {
"duration": 1.0,
"texture": ExtResource("28_m7qmh")
}, {
"duration": 1.0,
"texture": ExtResource("29_ujj8j")
}, {
"duration": 1.0,
"texture": ExtResource("30_da12h")
}, {
"duration": 1.0,
"texture": ExtResource("31_ncgxk")
}, {
"duration": 1.0,
"texture": ExtResource("32_1eepx")
}, {
"duration": 1.0,
"texture": ExtResource("33_8b2tj")
}, {
"duration": 1.0,
"texture": ExtResource("34_kwwpy")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("38_88h7c")
}, {
"duration": 1.0,
"texture": ExtResource("39_spwa8")
}, {
"duration": 1.0,
"texture": ExtResource("40_6tita")
}, {
"duration": 1.0,
"texture": ExtResource("41_apbpj")
}],
"loop": false,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_hedri")
}, {
"duration": 1.0,
"texture": ExtResource("43_mwsac")
}, {
"duration": 1.0,
"texture": ExtResource("44_aigve")
}, {
"duration": 1.0,
"texture": ExtResource("45_3h83a")
}, {
"duration": 1.0,
"texture": ExtResource("46_5x8y8")
}, {
"duration": 1.0,
"texture": ExtResource("47_25bvt")
}, {
"duration": 1.0,
"texture": ExtResource("48_16tv2")
}, {
"duration": 1.0,
"texture": ExtResource("49_ityy1")
}, {
"duration": 1.0,
"texture": ExtResource("50_l84km")
}, {
"duration": 1.0,
"texture": ExtResource("51_tgtwv")
}, {
"duration": 1.0,
"texture": ExtResource("52_1k0ut")
}, {
"duration": 1.0,
"texture": ExtResource("53_npuhe")
}],
"loop": false,
"name": &"kick",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("42_aj6jx")
}, {
"duration": 1.0,
"texture": ExtResource("43_xgjmy")
}, {
"duration": 1.0,
"texture": ExtResource("44_10a1v")
}, {
"duration": 1.0,
"texture": ExtResource("45_2vpg5")
}, {
"duration": 1.0,
"texture": ExtResource("46_c0vu5")
}, {
"duration": 1.0,
"texture": ExtResource("47_ssd2d")
}, {
"duration": 1.0,
"texture": ExtResource("48_1rdud")
}, {
"duration": 1.0,
"texture": ExtResource("49_3fn1l")
}, {
"duration": 1.0,
"texture": ExtResource("50_rowjk")
}, {
"duration": 1.0,
"texture": ExtResource("51_oxd6n")
}, {
"duration": 1.0,
"texture": ExtResource("52_et35l")
}, {
"duration": 1.0,
"texture": ExtResource("53_cvm5a")
}, {
"duration": 1.0,
"texture": ExtResource("54_j3lho")
}, {
"duration": 1.0,
"texture": ExtResource("55_mltuw")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxhce"]
size = Vector2(39, 59.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggf5c"]
size = Vector2(903, 59)

[node name="Bald Pirate" type="CharacterBody2D"]
z_index = 2
collision_layer = 4
script = ExtResource("1_lgqhx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5f4br")
animation = &"hit"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
z_index = 10
position = Vector2(-3.5, 3.75)
shape = SubResource("RectangleShape2D_qxhce")

[node name="Vision" type="Area2D" parent="."]
z_index = 10
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
visible = false
z_index = 10
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_ggf5c")

[node name="Node2D" type="Node2D" parent="."]

[node name="RayCast2DLeft" type="RayCast2D" parent="Node2D"]
z_index = 5
position = Vector2(0, 29)
target_position = Vector2(-36, 0)
collision_mask = 8

[node name="RayCast2DRight" type="RayCast2D" parent="Node2D"]
z_index = 5
position = Vector2(0, 29)
target_position = Vector2(36, 0)
collision_mask = 8

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
